--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
         "instagram-private-api": "^1.46.1",
         "instatouch": "^2.3.22",
         "is-hexcolor": "^1.0.0",
-        "jimp": "",
+        "jimp": "^1.6.0",
         "jsdom": "^24.1.0",
         "json-bigint": "^1.0.0",
         "lodash": "^4.17.21",
